# chat-app-rust

./: .gitignore  README.md
client-side/: Cargo.toml
client-side/src/: main.rs
slint_test/src/: main.rs
slint_test/ui/: app-window.slint
tcp-server/: Cargo.toml
tcp-server/src/: main.rs
