[package]
name = "slint_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.7.2"
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = "0.23.1"
futures = "0.3.30"
# stdout logging.
femme = { version = "2.2.1" }
log = { version = "0.4.20" }

# r3bl_rs_utils_core - friendly name generator.
r3bl_rs_utils_core = { version = "0.9.12" }
r3bl_tui = { version = "0.5.1" }
chrono = "0.4"


[build-dependencies]
slint-build = "1.7.2"

